
import org.opensearch.gradle.test.RestIntegTestTask
import java.util.concurrent.Callable

buildscript {
    ext {
        opensearch_version = System.getProperty("opensearch.version", "2.16.0")
        opensearch_build = opensearch_version + ".0"
        job_scheduler_version = System.getProperty("job_scheduler.version", opensearch_build)
        wazuh_version = System.getProperty("version", "5.0.0")
        revision = System.getProperty("revision", "0")
    }

    repositories {
        mavenLocal()
        maven { url "https://aws.oss.sonatype.org/content/repositories/snapshots" }
        mavenCentral()
        maven { url "https://plugins.gradle.org/m2/" }
    }

    dependencies {
        classpath "org.opensearch.gradle:build-tools:${opensearch_version}"
    }
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'opensearch.opensearchplugin'
apply plugin: 'opensearch.pluginzip'
apply plugin: 'opensearch.testclusters'

def pluginName = 'wazuh-indexer-command-manager'
def pluginDescription = 'The Command Manager plugin handles and distributes commands across your Wazuh environment.'
def projectPath = 'com.wazuh'
def pathToPlugin = 'commandmanager'
def pluginClassName = 'CommandManagerPlugin'

publishing {
    publications {
        pluginZip(MavenPublication) { publication ->
            pom {
                name = pluginName
                description = pluginDescription
                licenses {
                    license {
                        name = "The Apache License, Version 2.0"
                        url = "http://www.apache.org/licenses/LICENSE-2.0.txt"
                    }
                }
                developers {
                    developer {
                        name = "Wazuh"
                        url = "https://wazuh.com"
                    }
                }
            }
        }
    }
}

allprojects {
    group = "${projectPath}"
    version = "${wazuh_version}" + ".${revision}"
    targetCompatibility = JavaVersion.VERSION_11
    sourceCompatibility = JavaVersion.VERSION_11
}

opensearchplugin {
    name pluginName
    description pluginDescription
    classname "${projectPath}.${pathToPlugin}.${pluginClassName}"
    version = "${wazuh_version}" + ".${revision}"
    extendedPlugins = ['opensearch-job-scheduler']
    licenseFile rootProject.file('LICENSE.txt')
    noticeFile rootProject.file('NOTICE.txt')
}

configurations {
    zipArchive
}

def versions = [
    // Apache HTTP client. Used to perform HTTP request to external services (such as the Wazuh Server APIs).
    httpclient5: "5.4",
    httpcore5: "5.3.1",
    slf4j: "2.0.16",
    log4j: "2.23.1",
    // TLS support. Used by Apache Http Client ??
    conscrypt: "2.5.2",
    // Test libraries
    mockito: "5.12.0",
    junit: "4.13.2",
    // Jackson is used to manage JSON objects (serialization / deserialization)
    jackson: "2.17.2",
    jackson_databind: "2.17.2",
    // Used to mock the Wazuh Server API
    imposter: "4.1.2"
]

dependencies {
    implementation "org.apache.httpcomponents.client5:httpclient5:${versions.httpclient5}"
    implementation "org.apache.httpcomponents.core5:httpcore5-h2:${versions.httpcore5}"
    implementation "org.apache.httpcomponents.core5:httpcore5:${versions.httpcore5}"
    implementation "org.apache.logging.log4j:log4j-slf4j-impl:${versions.log4j}"
    implementation "org.slf4j:slf4j-api:${versions.slf4j}"
    implementation "org.conscrypt:conscrypt-openjdk-uber:${versions.conscrypt}"
    implementation "com.fasterxml.jackson.core:jackson-core:${versions.jackson}"
    implementation "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
    implementation "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"

    // Job Scheduler stuff
    zipArchive group: 'org.opensearch.plugin', name: 'opensearch-job-scheduler', version: "${opensearch_build}"
    implementation "org.opensearch:opensearch:${opensearch_version}"
    compileOnly "org.opensearch:opensearch-job-scheduler-spi:${job_scheduler_version}"

    // imposter
    testImplementation "org.mockito:mockito-core:${versions.mockito}"
    testImplementation "junit:junit:${versions.junit}"
    testImplementation "io.gatehill.imposter:distro-embedded:${versions.imposter}"
    testImplementation "io.gatehill.imposter:imposter-server:${versions.imposter}"
    testImplementation "io.gatehill.imposter:config-dynamic:${versions.imposter}"
    testImplementation "io.gatehill.imposter:mock-openapi:${versions.imposter}"
}

// This requires an additional Jar not published as part of build-tools
loggerUsageCheck.enabled = false

// No need to validate pom, as we do not upload to maven/sonatype
validateNebulaPom.enabled = false

// Skip forbiddenAPIs check on dependencies
thirdPartyAudit.enabled = false

//Skip checking for third party licenses
dependencyLicenses.enabled = false

repositories {
    mavenLocal()
    maven { url "https://aws.oss.sonatype.org/content/repositories/snapshots" }
    mavenCentral()
    maven { url "https://plugins.gradle.org/m2/" }
    // imposter maven repository
    maven { url "https://s3-eu-west-1.amazonaws.com/gatehillsoftware-maven/releases/" }
}

test {
    include '**/*Tests.class'
    jvmArgs "-Djava.security.policy=./plugins/command-manager/src/main/plugin-metadata/plugin-security.policy/plugin-security.policy"
}

// As of ES 7.7 the sample-extension-plugin is being added to the list of plugins for the testCluster during build before
// the job-scheduler plugin is causing build failures.
// The job-scheduler zip is added explicitly above but the sample-extension-plugin is added implicitly at some time during evaluation.
// Will need to do a deep dive to find out exactly what task adds the sample-extension-plugin and add job-scheduler there but a temporary hack is to
// reorder the plugins list after evaluation but prior to task execution when the plugins are installed.
afterEvaluate {
    testClusters.integTest.nodes.each { node ->
        def plugins = node.plugins
        def firstPlugin = plugins.get(0)
        plugins.remove(0)
        plugins.add(firstPlugin)
    }
}

task integTest(type: RestIntegTestTask) {
    description = "Run tests against a cluster"
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
}
tasks.named("check").configure { dependsOn(integTest) }


integTest {
    // The -Dcluster.debug option makes the cluster debuggable; this makes the tests debuggable
    if (System.getProperty("test.debug") != null) {
        jvmArgs '-agentlib:jdwp=transport=dt_socket,server=n,suspend=y,address=8000'
    }
}

Zip bundle = (Zip) project.getTasks().getByName("bundlePlugin");
integTest.dependsOn(bundle)
integTest.getClusters().forEach{c -> c.plugin(project.getObjects().fileProperty().value(bundle.getArchiveFile()))}

testClusters.integTest {
    testDistribution = "INTEG_TEST"
    // testDistribution =  "ARCHIVE"
    // need to install job-scheduler first, need to assemble job-scheduler first
    plugin(provider(new Callable<RegularFile>() {
        @Override
        RegularFile call() throws Exception {
            return new RegularFile() {
                @Override
                File getAsFile() {
                    return configurations.zipArchive.asFileTree.getSingleFile()
                }
            }
        }
    }))

    // This installs our plugin into the testClusters. Note: already installed above
    // plugin(project.tasks.bundlePlugin.archiveFile)

    // add customized keystore
    keystore 'm_api.auth.username', 'admin'
    keystore 'm_api.auth.password', 'test'
    keystore 'm_api.uri', 'http://127.0.0.1:9200/_plugins/_command_manager' // base URI of the M_API
}

run {
    useCluster testClusters.integTest
}

// updateVersion: Task to auto update version to the next development iteration
task updateVersion {
    onlyIf { System.getProperty('newVersion') }
    doLast {
        ext.newVersion = System.getProperty('newVersion')
        println "Setting version to ${newVersion}."
        // String tokenization to support -SNAPSHOT
        ant.replaceregexp(file: 'build.gradle', match: '"opensearch.version", "\\d.*"', replace: '"opensearch.version", "' + newVersion.tokenize('-')[0] + '-SNAPSHOT"', flags: 'g', byline: true)
    }
}
